--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,11 +1,11 @@
 .appHeader {
-  height: 230px;
+  height: 40vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  background-image: url('../assets/images/CCrivals.jpg');
+  background-image: url('../../assets/images/CCrivals.jpg');
   background-repeat: no-repeat;
   background-size: cover;
 }
